fix morags emote on firefox
it was the double quotes...

--- a/style/stylesheets/betterttv.css
+++ b/style/stylesheets/betterttv.css
@@ -1362,7 +1362,7 @@ body.channel_new.columns.ember-application {
 }
 
 /* tehMorag's emote */
-@keyframes "ttv-emo-6633" {
+@keyframes morag-spin {
     from {
         -webkit-transform: rotate(0);
         -moz-transform: rotate(0);
@@ -1380,7 +1380,7 @@ body.channel_new.columns.ember-application {
     };
 }
 
-@-moz-keyframes "ttv-emo-6633" {
+@-moz-keyframes morag-spin {
     from {
         -moz-transform: rotate(0);
         transform: rotate(0);
@@ -1392,7 +1392,7 @@ body.channel_new.columns.ember-application {
     };
 }
 
-@-webkit-keyframes "ttv-emo-6633" {
+@-webkit-keyframes morag-spin {
     from {
         -webkit-transform: rotate(0);
         transform: rotate(0);
@@ -1404,7 +1404,7 @@ body.channel_new.columns.ember-application {
     };
 }
 
-@-ms-keyframes "ttv-emo-6633" {
+@-ms-keyframes morag-spin {
     from {
         -ms-transform: rotate(0);
         transform: rotate(0);
@@ -1416,7 +1416,7 @@ body.channel_new.columns.ember-application {
     };
 }
 
-@-o-keyframes "ttv-emo-6633" {
+@-o-keyframes morag-spin {
     from {
         -o-transform: rotate(0);
         transform: rotate(0);
@@ -1429,11 +1429,11 @@ body.channel_new.columns.ember-application {
 }
 
 .ttv-emo-6633 {
-    -webkit-animation: ttv-emo-6633 1.5s linear infinite;
-    -moz-animation: ttv-emo-6633 1.5s linear infinite;
-    -ms-animation: ttv-emo-6633 1.5s linear infinite;
-    -o-animation: ttv-emo-6633 1.5s linear infinite;
-    animation: ttv-emo-6633 1.5s linear infinite;
+    -webkit-animation: morag-spin 1.5s linear infinite;
+    -moz-animation: morag-spin 1.5s linear infinite;
+    -ms-animation: morag-spin 1.5s linear infinite;
+    -o-animation: morag-spin 1.5s linear infinite;
+    animation: morag-spin 1.5s linear infinite;
 }
 
 /* Notification Container above chat */
